--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "gatsby-cli": "^2.4.8",
     "gatsby-plugin-sass": "^2.0.7",
-    "node-sass": "^4.11.0"
+    "gatsby-plugin-typescript": "^2.0.3",
+    "node-sass": "^4.11.0",
+    "typescript": "^3.2.2"
   }
 }
